Added AppErrorDto and change sending message methods